# advent-of-code

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  flake.nix  justfile
.github/workflows/: check.yaml
2019/elixir/: .credo.exs  .gitignore  deps.nix  flake.nix  justfile  mix.exs
2020/: Cargo.toml
2020/day-1/: Cargo.toml
2020/day-3/: Cargo.toml
2020/day-6/: Cargo.toml
2020/rust/: Cargo.toml  flake.nix
2020/zig/: .envrc  flake.nix  justfile
2021/: Cargo.toml
2021/day-1/: Cargo.toml
2021/day-2/: Cargo.toml
2021/day-3/: Cargo.toml
2021/day-4/: Cargo.toml
2021/day-5/: Cargo.toml
2021/day-6/: Cargo.toml
2021/day-7/: Cargo.toml
2021/rust/: Cargo.toml  flake.nix
2021/rust/day-13/: Cargo.toml
2021/rust/day-13/src/: bin.rs
2022/: Cargo.toml  justfile
2022/d/: .gitignore  flake.nix  justfile
2022/day-10/: Cargo.toml
2022/day-11/: Cargo.toml
2022/day-12/: Cargo.toml
2022/day-13/: Cargo.toml
2022/day-14/: Cargo.toml
2022/day-15/: Cargo.toml
2022/day-16/: Cargo.toml
2022/day-18/: Cargo.toml
2022/day-19/: Cargo.toml
2022/day-2/: Cargo.toml
2022/day-20/: Cargo.toml
2022/day-5/: Cargo.toml
2022/day-6/: Cargo.toml
2022/day-7/: Cargo.toml
2022/day-8/: Cargo.toml
2022/day-9/: Cargo.toml
2022/rust/: Cargo.toml  flake.nix  justfile
2023/: Cargo.toml
2023/day-10/: Cargo.toml
2023/day-11/: Cargo.toml
2023/day-14/: Cargo.toml
2023/day-2/: Cargo.toml
2023/day-3/: Cargo.toml
2023/day-5/: Cargo.toml
2023/day-7/: Cargo.toml
2023/day-7/src/: bin.rs  lib.rs
2023/day-8/: Cargo.toml
2023/rust/: flake.nix
2023/rust/day-13/: Cargo.toml
2023/rust/day-13/src/: bin.rs  lib.rs
2023/rust/day-5/: Cargo.toml
2023/rust/day-5/src/: bin.rs
2024/kotlin/: .gitignore  flake.nix  justfile  settings.gradle.kts
2024/rust/: Cargo.toml  flake.nix  justfile
2025/zig/: flake.nix  justfile
dhat/: dh_view.js
scaffolding/rust/: Cargo.toml
scaffolding/rust/src/: bin.rs  lib.rs
scaffolding/rust/src/_bin/: main.rs
(+312 files in other folders)
