[package]
name = "day-DAYNUM"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day-DAYNUM"
path = "src/_bin/main.rs"

[dependencies]
itertools.workspace = true
lazy_static.workspace = true
nom.workspace = true
nom-regex.workspace = true
regex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
