[package]
name = "day-5"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day-5"
path = "src/_bin/main.rs"

[dependencies]
dhat = { workspace = true, optional = true }
nom.workspace = true
rayon.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[features]
dhat-heap = ["dep:dhat"]
